@@ -23,14 +23,12 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.TimeUnit;
 import java.util.function.Consumer;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 /**
@@ -283,8 +281,8 @@ public class ConnectorHandle {
         List<StartAndStopLatch> taskLatches = includeTasks
                 ? taskHandles.values().stream()
                 .map(task -> task.expectedStarts(expectedStarts))
-                .collect(Collectors.toList())
-                : Collections.emptyList();
+                .toList()
+                : List.of();
         return startAndStopCounter.expectedStarts(expectedStarts, taskLatches);
     }
 
@@ -292,8 +290,8 @@ public class ConnectorHandle {
         List<StartAndStopLatch> taskLatches = includeTasks
                 ? taskHandles.values().stream()
                 .map(task -> task.expectedStarts(expectedTasksStarts.get(task.taskId())))
-                .collect(Collectors.toList())
-                : Collections.emptyList();
+                .toList()
+                : List.of();
         return startAndStopCounter.expectedStarts(expectedStarts, taskLatches);
     }
 
@@ -345,8 +343,8 @@ public class ConnectorHandle {
         List<StartAndStopLatch> taskLatches = includeTasks
                 ? taskHandles.values().stream()
                 .map(task -> task.expectedStops(expectedStops))
-                .collect(Collectors.toList())
-                : Collections.emptyList();
+                .toList()
+                : List.of();
         return startAndStopCounter.expectedStops(expectedStops, taskLatches);
     }
 
@@ -354,8 +352,8 @@ public class ConnectorHandle {
         List<StartAndStopLatch> taskLatches = includeTasks
                 ? taskHandles.values().stream()
                 .map(task -> task.expectedStops(expectedTasksStops.get(task.taskId())))
-                .collect(Collectors.toList())
-                : Collections.emptyList();
+                .toList()
+                : List.of();
         return startAndStopCounter.expectedStops(expectedStops, taskLatches);
     }
 
